--- a/style.css
+++ b/style.css
@@ -22,18 +22,21 @@
 
 body {
     margin: 0;
-    min-width: 100%;
-    color: #191919;
-}
-
-main {
-    padding: 0px 50px;
-    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     background-image: url("/images/background-1.jpg");
     background-size: auto;
     background-attachment: scroll;
     background-position: center;
     background-size: cover;
+    color: #191919;
+}
+
+main {
+    width: 1440px;
+    padding: 0px 100px;
+    min-height: 100vh;
 }
 
 .content{
