--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ body {
 }
 
 main {
-    width: 1440px;
-    min-width: 1440px;
-    padding: 0px 100px;
+    width: 1340px;
+    min-width: 1340px;
+    max-width: 1340px;
     min-height: 100vh;
 }
 
