--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 }
 
 /* --MAIN-- */
+p, h1 {
+    margin: 0;
+}
 
 * {
     transition: 0.4s;
@@ -125,7 +128,6 @@ a {
     font-family: 'TTNorms-Bold', bold;
     font-size: 85px;
     text-align: center;
-    margin: 0;
     width: 100%;
 }
 
@@ -160,6 +162,11 @@ a {
     align-self: center;
 }
 
+.mission-content > .text-section { 
+    position: relative;
+    top: 100px;
+}
+
 .image-section {
     display: flex;
     justify-content: center;
@@ -189,15 +196,16 @@ a {
 
 .text-section > .title {
     font-family: 'TTNorms-Bold', bold;
-    font-size: 36px;
+    font-size: 48px;
     margin: 0;
 }
 
 .text-section > .description {
-    width: 450px;
+    width: 600px;
     text-align: justify;
     font-family: 'TTNorms-Regular', regular;
-    font-size: 20px;
+    font-size: 29px;
+    line-height: 50px;
 }
 
 /* --GOALS-- */
@@ -213,9 +221,54 @@ a {
 }
 
 .goals-content > .image-section > img {
-    width: 500px;
+    width: 550px;
+    height:fit-content;
+    position: relative;
+    top: 50px;
 }
 
 .goals-content > .text-section > .description {
     width: 600px;
+}
+
+/* --PRESIDENT-- */
+.president {
+    display: flex;
+    flex-direction: column;
+}
+
+.president-header {
+    display: flex;
+    justify-content: flex-start;
+    gap: 15px;
+}
+
+.president-header > img {
+    width: 50px;
+    height: fit-content;
+}
+
+.president-header > p{
+    font-family: 'TTNorms-Bold', bold;
+    font-size: 20px;
+}
+
+.president-content {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 150px;
+}
+
+.president-content > .text-section {
+    position: relative;
+    top: 50px;
+}
+
+.image-section > .president {
+    width: 550px;
+    height: fit-content;
+}
+
+.president-title {
+    padding-bottom: 20px;
 }
