--- a/style.css
+++ b/style.css
@@ -289,11 +289,11 @@ a {
     display: flex;
     justify-content: space-between;
     align-content: center;
+    gap:30px;
 }
 
 .block {
     display: flex;
-    margin: 0px 30px;
     justify-content: center;
     align-self: center;
     background-color: #ffffff;
@@ -307,6 +307,16 @@ a {
     border-radius: 0px 30px 0px 0px;
 }
 
+.text-container {
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding:20px;
+}
+
 .our-work {
-    padding-bottom: 150px;
+    padding-bottom: 150px
+}
+
+.text-container > .description {
+    font-family: 'TTNorms-Regular', regular;
 }
