--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a {
     background-color: #ffffff;
     font-size: 22px;
     font-family: 'TTNorms-Regular', regular;
-    padding: 10px 30px;
+    padding: 15px 30px;
     width: fit-content;
     border-radius: 30px;
 }
@@ -319,4 +319,6 @@ a {
 
 .text-container > .description {
     font-family: 'TTNorms-Regular', regular;
+    font-size: 25px;
+    text-align: center;
 }
