--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ a {
     font-family: 'TTNorms-Bold', bold;
     font-size: 48px;
     margin: 0;
+    padding-bottom: 40px;
 }
 
 .text-section > .description {
@@ -292,15 +293,35 @@ a {
     gap:30px;
 }
 
+.work-block {
+    padding:0px 0px 150px 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.block > p {
+    align-self: center;
+    text-align: center;
+    margin: 0px 30px;
+    font-family: 'TTNorms-Bold', bold;
+    font-size: 28px;
+    width: fit-content;
+}
+
 .block {
     display: flex;
     justify-content: center;
-    align-self: center;
+    align-self: flex-start;
     background-color: #ffffff;
     border-radius: 0px 50px 0px 50px;
 }
 
+.learn-button{
+    font-size: 28px;
+}
+
 .block > img {
+    align-self: center;
     width: 85%;
     margin: 25px 0px;
     height: fit-content;
@@ -321,4 +342,42 @@ a {
     font-family: 'TTNorms-Regular', regular;
     font-size: 25px;
     text-align: center;
+}
+
+/* --COORPERATION-- */
+.coorp {
+    gap: 75px;
+}
+
+.coorp > .text-section {
+    top: 0;
+}
+
+.coorp > .text-section > a{
+    padding-top: 40px;
+}
+
+.coorp > .text-section > .description {
+    font-size: 24px;
+    line-height: 40px;
+}
+
+.coorp-img{
+    width: 100%;
+    border-radius: 0px 30px 0px 0px;
+}
+
+.coorperation-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 45px;
+}
+
+.coorperation-content > title{
+    text-align: center;
+}
+
+.coorperation {
+    padding-bottom: 150px
 }
