--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ a {
 .header-content {
     display: flex;
     justify-content: space-between;
-    padding: 35px 0px 10px 0px;
+    padding-top: 35px;
+    padding-bottom: 10px;
     height: 100px;
 }
 
@@ -399,26 +400,26 @@ a {
 }
 
 /* --FOOTER-- */
-footer {
+.footer-content {
     display: flex;
     width: 100%;
     margin-bottom: 50px;
 }
 
-footer > .column {
+.footer-content > .column {
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-footer > .column > .line {
+.footer-content > .column > .line {
     display: flex;
     gap: 5px;
     align-items: center;
 }
 
-footer > .column > .title {
+.footer-content > .column > .title {
     font-family: 'TTNorms-Bold', bold;
     font-size: 48px;
     margin: 0;
@@ -433,7 +434,7 @@ footer > .column > .title {
     margin-bottom: 50px;
 }
 
-footer > .column > .line > p, footer > .column > .line > .numbers > p{
+.footer-content > .column > .line > p, .footer-content > .column > .line > .numbers > p{
     margin-left: 5px;
     font-family: 'TTNorms-Bold', bold;
     font-size: 22px;
