--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a {
     font-family: 'TTNorms-Bold', bold;
     font-size: 18px;
     padding: 6px 12px;
-    height: fit-content;
+    height: auto;
     border-radius: 15px;
 }
 
@@ -100,7 +100,7 @@ a {
     font-size: 22px;
     font-family: 'TTNorms-Regular', regular;
     padding: 15px 30px;
-    width: fit-content;
+    width: auto;
     border-radius: 30px;
 }
 
@@ -184,7 +184,7 @@ a {
 
 .mission-content > .image-section > img {
     width: 80%;
-    height: fit-content;
+    height:auto;
 }
 
 .image-section {
@@ -232,7 +232,7 @@ a {
 
 .goals-content > .image-section > img {
     width: 90%;
-    height:fit-content;
+    height:auto;
     position: relative;
     top: 50px;
 }
@@ -251,7 +251,7 @@ a {
 
 .president-header > img {
     width: 50px;
-    height: fit-content;
+    height: auto;
 }
 
 .president-header > p{
@@ -272,7 +272,7 @@ a {
 
 .image-section > .president {
     width: 550px;
-    height: fit-content;
+    height: auto;
 }
 
 .president-title {
@@ -310,7 +310,7 @@ a {
     margin: 0px 30px;
     font-family: 'TTNorms-Bold', bold;
     font-size: 28px;
-    width: fit-content;
+    width: auto;
 }
 
 .block {
@@ -328,9 +328,9 @@ a {
 .block > img {
     align-self: center;
     width: 85%;
-    height:fit-content;
+    height:auto;
     margin: 25px 0px;
-    height: fit-content;
+    height: auto;
     border-radius: 0px 30px 0px 30px;
 }
 
@@ -370,7 +370,7 @@ a {
 
 .coorp-img{
     width: 100%;
-    height:fit-content;
+    height:auto;
     border-radius: 80px 0px 80px 0px;
 }
 
@@ -451,13 +451,13 @@ a {
         bottom: 100px;
         width: 70px;
         right: 10px;
-        height: fit-content;
+        height: auto;
     }
     .yellow-ellipse {
         top: 120px;
         right: 40px;
         width: 70px;
-        height: fit-content;
+        height: auto;
     }
 
     .mission-content {
@@ -470,7 +470,7 @@ a {
 
     .goals-content > .image-section > img {
         width: 60%;
-        height: fit-content;
+        height: auto;
         top: 0;
     }
 
@@ -484,7 +484,7 @@ a {
     }
 
     .text-section > .description {
-        width: fit-content;
+        width: auto;
     }
 }
 
@@ -520,7 +520,7 @@ a {
 
     .mission-content > .image-section > img, .goals-content > .image-section > img {
         width: 60%;
-        height: fit-content;
+        height: auto;
     }
 }
 
@@ -539,7 +539,7 @@ a {
 
     .logo { 
         width: 150px !important;
-        height: fit-content;
+        height: auto;
     }
 
     .goals-content > .image-section > img {
