--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ a {
 
 .goals-content > .image-section > img {
     width: 90%;
-    height:auto;
+    height:max-content;
     position: relative;
     top: 50px;
 }
