--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     justify-content: center;
     background-image: url("/images/background-1.jpg");
-    background-size: max-content;
+    background-size: auto;
     background-attachment: scroll;
     background-position: center;
     background-size: cover;
@@ -87,7 +87,7 @@ a {
     font-family: 'TTNorms-Bold', bold;
     font-size: 18px;
     padding: 6px 12px;
-    height: max-content;
+    height: auto;
     border-radius: 15px;
 }
 
@@ -101,7 +101,7 @@ a {
     font-size: 22px;
     font-family: 'TTNorms-Regular', regular;
     padding: 15px 30px;
-    width: max-content;
+    width: auto;
     border-radius: 30px;
 }
 
@@ -185,7 +185,7 @@ a {
 
 .mission-content > .image-section > img {
     width: 80%;
-    height:max-content;
+    height:auto;
 }
 
 .image-section {
@@ -233,7 +233,7 @@ a {
 
 .goals-content > .image-section > img {
     width: 90%;
-    height:max-content;
+    height:auto;
     position: relative;
     top: 50px;
 }
@@ -252,7 +252,7 @@ a {
 
 .president-header > img {
     width: 50px;
-    height: max-content;
+    height: auto;
 }
 
 .president-header > p{
@@ -273,7 +273,7 @@ a {
 
 .image-section > .president {
     width: 550px;
-    height: max-content;
+    height: auto;
 }
 
 .president-title {
@@ -311,7 +311,7 @@ a {
     margin: 0px 30px;
     font-family: 'TTNorms-Bold', bold;
     font-size: 28px;
-    width: max-content;
+    width: auto;
 }
 
 .block {
@@ -329,9 +329,9 @@ a {
 .block > img {
     align-self: center;
     width: 85%;
-    height:max-content;
+    height:auto;
     margin: 25px 0px;
-    height: max-content;
+    height: auto;
     border-radius: 0px 30px 0px 30px;
 }
 
@@ -371,7 +371,7 @@ a {
 
 .coorp-img{
     width: 100%;
-    height:max-content;
+    height:auto;
     border-radius: 80px 0px 80px 0px;
 }
 
@@ -452,13 +452,13 @@ a {
         bottom: 100px;
         width: 70px;
         right: 10px;
-        height: max-content;
+        height: auto;
     }
     .yellow-ellipse {
         top: 120px;
         right: 40px;
         width: 70px;
-        height: max-content;
+        height: auto;
     }
 
     .mission-content {
@@ -471,7 +471,7 @@ a {
 
     .goals-content > .image-section > img {
         width: 60%;
-        height: max-content;
+        height: auto;
         top: 0;
     }
 
@@ -485,7 +485,7 @@ a {
     }
 
     .text-section > .description {
-        width: max-content;
+        width: auto;
     }
 }
 
@@ -521,7 +521,7 @@ a {
 
     .mission-content > .image-section > img, .goals-content > .image-section > img {
         width: 60%;
-        height: max-content;
+        height: auto;
     }
 }
 
@@ -540,7 +540,7 @@ a {
 
     .logo { 
         width: 150px !important;
-        height: max-content;
+        height: auto;
     }
 
     .goals-content > .image-section > img {
