--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 45px;
+    gap: 25px;
 }
 
 .our-work-content > title{
@@ -301,7 +301,7 @@ a {
 }
 
 .work-block {
-    padding:0px 0px 150px 0px;
+    padding:0px 0px 30px 0px;
     display: flex;
     flex-direction: column;
 }
@@ -488,9 +488,22 @@ a {
     .text-section > .description {
         width: auto;
     }
-    
+
     .president {
         gap:20px;
+    }
+
+    .blocks-section {
+        flex-direction: column;
+    }
+
+    .block {
+        width: 50%;
+        align-self: center;
+    }
+
+    .our-work-content {
+        gap: 15px;
     }
 }
 
@@ -527,6 +540,10 @@ a {
     .mission-content > .image-section > img, .goals-content > .image-section > img, .president-content > .image-section > img{
         width: 60%;
         height: auto;
+    }
+
+    .block {
+        width: 70%;
     }
 }
 
@@ -596,6 +613,10 @@ a {
     .text-section > .description {
         line-height: 35px;
     }
+
+    .block {
+        width: 90%;
+    }
     
 }
 
@@ -619,4 +640,5 @@ a {
     .text-section > .description {
         text-align: center;
     }
+
 }
