--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ a {
     height:auto;
 }
 
+.coorperation-section > img {
+    width:100% !important;
+}
+
 .image-section {
     display: flex;
     justify-content: center;
@@ -343,7 +347,7 @@ a {
 }
 
 .our-work {
-    padding-bottom: 150px
+    padding-bottom: 70px
 }
 
 .text-container > .description {
@@ -475,6 +479,10 @@ a {
         height: auto;
         top: 0;
     }
+    .coorperation-section > img {
+        width:60% !important;
+    }
+    
 
     .goals-content {
         flex-direction: column;
@@ -541,6 +549,11 @@ a {
         width: 60%;
         height: auto;
     }
+
+    .coorperation-section > img {
+        width:90% !important;
+    }
+    
 
     .block {
         width: 70%;
