--- a/style.css
+++ b/style.css
@@ -178,11 +178,6 @@ a {
     align-self: center;
 }
 
-.mission-content > .text-section { 
-    position: relative;
-    top: 100px;
-}
-
 .mission-content > .image-section > img {
     width: 80%;
     height:auto;
@@ -400,6 +395,10 @@ a {
 }
 
 /* --HOUSES-- */
+.support{
+    border-radius: 80px 0px 80px 0px;
+}
+
 .houses{
     border-radius: 0px 80px 0px 80px;
 }
@@ -707,8 +706,12 @@ a {
     }
 
     .button {
-        font-size: 16px;
+        font-size: 20px;
         padding: 13px 26px;
+    }
+
+    .banner-button{
+        font-size: 16px;
     }
 
 }
