--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ a {
 
 .goals-content > .image-section > img {
     width: 90%;
-    height:min-content;
+    height:auto;
     position: relative;
     top: 50px;
 }
@@ -277,7 +277,7 @@ a {
 
 .image-section > .president {
     width: 90%;
-    height: min-content;
+    height: auto;
 }
 
 .president-title {
