--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ a {
     font-size: 22px;
     font-family: 'TTNorms-Regular', regular;
     padding: 15px 30px;
+    text-align: center;
     width: auto;
     border-radius: 30px;
 }
@@ -150,6 +151,7 @@ a {
 
 .blue-ellipse {
     position: relative;
+    left: 110px;
     bottom: 140px;
     transition: 0.4s;
 }
@@ -157,7 +159,7 @@ a {
 .yellow-ellipse {
     position: relative;
     top: 150px;
-    right: 70px;
+    right: 10px;
     transition: 0.4s;
 }
 
@@ -212,6 +214,7 @@ a {
 .title {
     font-family: 'TTNorms-Bold', bold;
     font-size: 48px;
+    text-align: center;
     margin: 0;
     padding-bottom: 40px;
 }
@@ -457,13 +460,13 @@ a {
     .blue-ellipse {
         bottom: 100px;
         width: 70px;
-        right: 10px;
+        left: 80px;
         height: auto;
     }
 
     .yellow-ellipse {
         top: 120px;
-        right: 40px;
+        right: 10px;
         width: 70px;
         height: auto;
     }
@@ -548,7 +551,7 @@ a {
 
     .yellow-ellipse {
         top: 140px;
-        right: 40px;
+        right: 0px;
     }
 
     .revert {
